<?xml version="1.0"?>
<?xml-model href="" schematypens=""?>
<package format="2">
    <name>gps_amcl</name>
    <version>1.16.2</version>
    <description>
        <p>
            AMCL ros implementation modification
        </p>
        <p>
            
        </p>
    </description>
    <url>http://wiki.ros.org/amcl</url>
    <author>Brian P. Gerkey</author>
    <author>contradict@gmail.com</author>
    <maintainer email="mimiguel@ing.uc3m.es.com">David V. Lu!!</maintainer>
    <license>LGPL</license>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>message_filters</build_depend>
    <build_depend>tf2_geometry_msgs</build_depend>

    <depend>diagnostic_updater</depend>
    <depend>dynamic_reconfigure</depend>
    <depend>geometry_msgs</depend>
    <depend>nav_msgs</depend>
    <depend>rosbag</depend>
    <depend>roscpp</depend>
    <depend>sensor_msgs</depend>
    <depend>std_srvs</depend>
    <depend>tf2</depend>
    <depend>tf2_msgs</depend>
    <depend>tf2_ros</depend>
    <depend>robot_localization</depend>
    <depend>pointcloud_to_laserscan</depend>
    <depend>map_server</depend>
    <depend>gps_common</depend>
    <depend>navigation</depend>

    <test_depend>map_server</test_depend>
    <test_depend>rostest</test_depend>
    <test_depend>python_orocos_kdl</test_depend>
</package>
